@@ -647,7 +647,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
     { body =>
 	[ {	'code' => '1100010',
 		'num_slots' => '3',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
 		'severity' => 'info',
@@ -658,7 +658,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 	  {
 		'slot' => '1:1',
 		'code' => '1100016',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
@@ -670,7 +670,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 	  {
 		'slot' => '1:2',
 		'code' => '1100016',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
@@ -686,7 +686,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'module' => 'amanda',
 		'severity' => 'info',
 		'running_on' => 'amanda-server',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'slot' => '1:3',
 		'code' => '1100016'
@@ -703,7 +703,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
     { body =>
 	[ {	'code' => '1100010',
 		'num_slots' => '3',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
 		'severity' => 'info',
@@ -714,7 +714,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 	  {
 		'slot' => '1:1',
 		'code' => '1100016',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
@@ -726,7 +726,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 	  {
 		'slot' => '1:2',
 		'code' => '1100016',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
@@ -742,7 +742,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'module' => 'amanda',
 		'severity' => 'info',
 		'running_on' => 'amanda-server',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'slot' => '1:3',
 		'code' => '1100016'
@@ -796,7 +796,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
     { body =>
 	[ {	'code' => '1100010',
 		'num_slots' => '3',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
 		'severity' => 'info',
@@ -807,7 +807,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 	  {
 		'slot' => '1:1',
 		'code' => '1100016',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
@@ -819,7 +819,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 	  {
 		'slot' => '1:2',
 		'code' => '1100016',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
@@ -835,7 +835,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'module' => 'amanda',
 		'severity' => 'info',
 		'running_on' => 'amanda-server',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'slot' => '1:3',
 		'code' => '1100016'
@@ -852,7 +852,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
     { body =>
 	[ {	'code' => '1100010',
 		'num_slots' => '3',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
 		'severity' => 'info',
@@ -863,7 +863,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 	  {
 		'slot' => '1:1',
 		'code' => '1100016',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
@@ -875,7 +875,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 	  {
 		'slot' => '1:2',
 		'code' => '1100016',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'module' => 'amanda',
 		'running_on' => 'amanda-server',
@@ -891,7 +891,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'module' => 'amanda',
 		'severity' => 'info',
 		'running_on' => 'amanda-server',
-		'source_filename' => '/amanda/h1/linux/lib/amanda/perl/Amanda/Changer.pm',
+		'source_filename' => "$amperldir/Amanda/Changer.pm",
 		'write_protected' => '',
 		'slot' => '1:3',
 		'code' => '1100016'
